2002-01-01  Patrick Burke  <takhisisii@yahoo.com.au>
	* tools/.cvsignore: Added cmanip to ignore list.
	* usecode/ucxt/src/Makefile.am: Added -Wall and -W compile options.
	* usecode/ucxt/data/opcodes.txt: Added additional flags for pretty
	printing -fz output, and 'fake' opcodes for internal decompilation
	use.
	* usecode/ucxt/*: Modified source to support the additional flags;
	Fixed all unnecessary warnings produced by -Wall and -W; Added
	'decimal' output option support for the opcodes.txt file.

2001-12-30  Jeff Freedman  <jeff@amy.nerble.net>

	* gamemap.cc,server.cc: Send terrain data to client.

	* mapedit/chunklst.cc (Chunk_chooser): 'Move' is working (somewhat).

2001-12-30  Patrick Burke  <takhisisii@yahoo.com.au>
	* usecode/ucxt/data/opcodes.txt: Added a parenthesis flag to help with
	pretty printing output under -fz, modified the usecode-script output
	column under a number of opcodes as a consequence.
	* usecode/ucxt/*: More pretty-printing output corrections under -fz,
	including local vars, return var and semicolons in the appropriate
	places.

	* usecode/ucxt/*: Added a 'basic' option (-b), to not do any of the
	more complex optimisations. Fixed a bug caused by the abovementioned
	'parenthesis flag' under -fa output.

2001-12-29  Patrick Burke  <takhisisii@yahoo.com.au>
	* usecode/ucxt/*: Added output for -fl to show whether the function
	returns a value or not. Polishing off -fz output, including outputting
	'extern' declarations of functions used, and the parameters being passed
	to the function.
	* usecode/ucxt/data/opcodes.txt: Fixed setr opcode output under -fz.

2001-12-28  Jeff Freedman  <jeff@amy.nerble.net>

	* mapedit/*.{cc,h} (Chunk_chooser): 'Locate' is somewhat working.

2001-12-29  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* server.cc, gumps_utils.h: some minor changes for AIX 
	* shapeinf.h: removed static var from inlined function

2001-12-28  Jeff Freedman  <jeff@amy.nerble.net>
